
* The ClassLoader class now has a searchPath() method to provide access to the paths used to find classes.

* Refactored IECoreArnold converters to share a ToArnoldShapeConverter base class. Added bindings so that they may be used from python in conjunction with the arnold python bindings. Added a ToArnoldPointsConverter for dealing with points primitives.

Bug Fixes :

* Fixed tumbling in CameraController when pivot is not at the centre of the world.

7.4.0 :

* Added an Options class, for specifying renderer options.

* Added IECoreHoudini.UpdateMode to safely switch hou.updateModes using a python with statement.

* Added MPlayDisplayDriver, for rendering images to MPlay using either RenderMan or Arnold (or anything else which can talk to an IECore.DisplayDriver).

* Added a general purpose IECoreHoudini::MessageHandler.

Improvements :

* ClassVectorParameter now supports IECore.V2fParameters in the header, for the maya UI

* IECoreHoudini GEO_IOTranslator accepts ptc files (if IECoreRI is available), so the file sop can be used to read ptcs.

* Added From/ToHoudiniGeometryConverter bindings to deal with HOM_Geometry directly. This allows hou.Geometry to be read/written when the node is not available (i.e. from within the cook of a Python SOP)

* Added From/ToHoudiniGeometryConverter::supportedTypes() to return a set of IECore:TypeIds with registered converters

* SOP_ParameterisedHolders now expose converter parameters (if applicable) for the parameters that work by node connection

* SOP_ParameterisedHolder and IECoreHoudini.ParmTemplate now support presetsOnly IntParameters

* Added parameters to FromHoudiniGroupConverter which allow the Primitive separation to be done by attribute value rather than by GA_PrimitiveGroup. Default (and therefor the factory function) is by GA_PrimitiveGroup.

* Using the new IECoreHoudini::MessageHandler to redirect IECore messages as SOP errors and warnings when ops and procedurals cook

Bug Fixes :
